feat(GUI) : Admin_auctions + Admin_products + fix Logic